--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="modal-root"></div>
     <script src="index.js" type="text/JSX"></script>
   </body>
 </html>
